# osu-tracker

./: .env.example  .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  recolector.py
app/: .env.example  database.py  main.py
app/routers/: stats.py  user.py
app/services/: ossapi.py
public/: index.html  script.js  style.css
